Fix broken style

--- a/NodeJSES6/public/css/custom.css
+++ b/NodeJSES6/public/css/custom.css
@@ -1,6 +1,3 @@
-.container {
-    margin-top: 0.2em;
-}
-.custom-content {
-    margin-top: 3.5em;
+.footer {
+    background-color: #ffffff;
 }
